// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Key fails for null or undefined 1`] = `
"[
  {
    "code": "invalid_union",
    "unionErrors": [
      {
        "issues": [
          {
            "code": "custom",
            "fatal": true,
            "path": [],
            "message": "Invalid input"
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "code": "custom",
            "message": "Input not instance of Buffer",
            "fatal": true,
            "path": []
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "code": "invalid_type",
            "expected": "string",
            "received": "null",
            "path": [],
            "message": "Expected string, received null"
          }
        ],
        "name": "ZodError"
      }
    ],
    "path": [],
    "message": "Key must be a string, a buffer or a secret"
  }
]"
`;

exports[`Key fails for null or undefined 2`] = `
"[
  {
    "code": "invalid_union",
    "unionErrors": [
      {
        "issues": [
          {
            "code": "custom",
            "fatal": true,
            "path": [],
            "message": "Invalid input"
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "code": "custom",
            "message": "Input not instance of Buffer",
            "fatal": true,
            "path": []
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "code": "invalid_type",
            "expected": "string",
            "received": "undefined",
            "path": [],
            "message": "Required"
          }
        ],
        "name": "ZodError"
      }
    ],
    "path": [],
    "message": "Key must be a string, a buffer or a secret"
  }
]"
`;
